# smiling_panda

./: pyproject.toml
cli/: __init__.py  commands.py
config/: settings.py  urls.py
core/: logic.py  models.py
web/: views.py
web/templates/web/: index.html
web/templates/web/includes/: base.html
